<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/dialog"
    android:theme = "@style/cust_dialog"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/askLevel"
        android:textColor="#000000"
        android:id="@+id/textView8"
        android:layout_gravity="center" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/groupLevels"
        android:layout_gravity="center">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio1"
            android:checked="true"
            android:textColor="#000000"
            android:text="@string/level1"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio2"
            android:textColor="#000000"
            android:text="@string/level2"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio3"
            android:textColor="#000000"
            android:text="@string/level3"
            android:layout_gravity="center_horizontal" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/trainingWeeks"
        android:textColor="#000000"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/inputNumberofWeeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:gravity="center"
            android:id="@+id/accept" />
    </LinearLayout>

</LinearLayout>