<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section1"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Activity"
            android:id="@+id/activityText" />

        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/popMenu"
            android:text = "Bieg"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section1"
        android:id="@+id/section2"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Distance"
            android:id="@+id/distanceText" />


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/viewDistance"
            android:id="@+id/distanceView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section3"
        android:layout_below="@+id/section2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Speed"
            android:id="@+id/speedText" />


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/viewSpeed"
            android:id="@+id/speedView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section4"
        android:layout_below="@+id/section3"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Calories"
            android:id="@+id/caloriesView" />


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0 kcal"
            android:id="@+id/caloriesViewText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:src="@mipmap/play"
        android:background="#0000"
        android:layout_above="@+id/timerView"
        android:layout_centerHorizontal="true"
        android:contentDescription="descript" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/viewTime"
        android:id="@+id/timerView"
        android:layout_above="@+id/gpsListner"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gpsListner"
        android:text="@string/GpsListner2"
        android:layout_above="@+id/imageGoMap"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageGoMap"
        android:src="@mipmap/redo"
        android:background="#0000"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/section3"
        android:contentDescription="zmień widok" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endBtn"
        android:src="@mipmap/stop"
        android:visibility="invisible"
        android:background="#0000"
        android:contentDescription="ok"
        android:layout_above="@+id/timerView"
        android:layout_toStartOf="@+id/btnStart" />

</RelativeLayout>